--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "commonjs",
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
+    "jsx": "react-jsx",
     "sourceMap": true,
     "baseUrl": ".",
     "outDir": "dist",
