--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.9",
+    "@uiw/react-codemirror": "^4.21.2",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
